# ai-for-learning-productivity

./: .env.example  .gitignore  .master_key  COMPETITION_PRESENTATION_STRATEGY.md  DEPLOYMENT_SUMMARY.md  Dockerfile  PROJECT_SUMMARY.md  PROJECT_VISUALIZATION.md  README.md  ai_learning_accelerator.db  alembic.ini  debug_learning.py  demo_deployment.py  design.md  docker-compose.yml  pyproject.toml  requirements.md  requirements.txt  simple_test.py  temp_fix.py  test_import.py
.kiro/specs/ai-learning-accelerator/: design.md  requirements.md  tasks.md
alembic/: env.py
alembic/versions/: 0d41960f02e6_initial_migration_with_all_models.py
plugins/example_plugin/: README.md  plugin.py
scripts/: deploy.py  startup.py
src/ai_learning_accelerator/: __init__.py  config.py  database.py  logging_config.py  main.py
src/ai_learning_accelerator/api/: __init__.py  analytics.py  auth.py  automation.py  content_lifecycle.py  context.py  encryption.py  feedback.py  health.py  interaction.py  multimodal.py  plugins.py  privacy.py  users.py  workflow_integration.py  workflows.py
src/ai_learning_accelerator/auth/: dependencies.py
src/ai_learning_accelerator/config/: deployment.py
src/ai_learning_accelerator/integrations/: __init__.py  integration_manager.py  workflow_detector.py
src/ai_learning_accelerator/plugins/: __init__.py  base_plugin.py  plugin_manager.py  webhook_manager.py
src/ai_learning_accelerator/schemas/: analytics.py  automation.py  content.py  content_lifecycle.py  context.py  debugging.py  encryption.py  feedback.py  interaction.py  multimodal.py  privacy.py  user.py  workflows.py
src/ai_learning_accelerator/services/: __init__.py  analytics_engine.py  auth.py  content.py  content_adaptation.py  context_analyzer.py  debug_assistant.py  (+11 more)
tests/: __init__.py  conftest.py  test_content_lifecycle.py  test_encryption.py  test_end_to_end_workflows.py  test_error_handling.py  test_error_integration.py  test_feedback_integration.py  test_health.py  test_privacy.py  test_security.py  test_workflow_integration.py
tests/property_tests/: __init__.py  test_accessibility_accommodation.py  test_automation_pattern_detection.py  test_base_properties.py  test_competency_based_path_updates.py  test_content_lifecycle_management.py  test_content_quality_management.py  test_context_adaptation.py  test_context_aware_debugging.py  test_data_encryption.py  test_engagement_optimization.py  test_integration_extensibility.py  test_learning_path_generation.py  test_multi_modal_content_delivery.py  test_non_intrusive_learning_opportunities.py  test_progress_visualization.py  test_skill_level_adaptive_explanations.py  test_solution_ranking_consistency.py  test_user_control_priority.py  test_user_profile_consistency.py  test_workflow_complementarity.py
(+8 files in other folders)
